	 directory be of length PATH_MAX (patch #868409) (Fred).
20040102 fuse.c: remove unused variable 'autoload' from fuse_init().
20040102 ui/scaler, ui/sdl/sdldisplay.c: add Timex 1.5x scaler (part of
	 patch #868418) (Fred).
20040102 ui/scaler/scalers.c: merges to keep us close to ScummVM's code
	 (rest of patch #868418) (Fred).
20040102 ui/gtk/{gtkdisplay,gtkui}.c: allow 3x3 scaled modes.
20040102 ui/gtk/gtkdisplay.c: in uidisplay_area, reorder the loop to
	 improve cache localisation and then apply the obvious
	 optimisations.
20040104 tape.[ch], ui/ui.h, ui/gtk/browse.c: make the GTK+ tape browser
	 no longer modal.
20040104 widget/{browse,widget}.c: fix up the widget UIs for the new
	 tape browser code.
20040104 tape.[ch], ui/gtk/browse.c: add a 'tape modified' indicator to
	 the GTK+ tape browser window.
20040104 tape.[ch], utils.c, ui/ui.h, ui/gtk/{confirm,gtkui.c}: confirm
	 before an attempt is made to close a modified tape.
20040104 widget/{menu,widget}.c: fix up widget UIs for new confirm code.
20040105 tape.c, ui/gtk/{confirm,gtkui}.c: check for tape modification
	 on exit.
20040105 specplus3.[ch], ui/ui.h, ui/gtk/gtkui.c: make writes to +3 disks
	 only be committed when explicitly requested by the user.
20040105 ui/gtk/gtkui.c, widget/{menu.c,menu_data.c,widget_internals.h}:
	 fix up the widget UIs and non-lib765 systems wrt the disk writing
	 changes.
20040106 ui/gtk/gtkui.c: merge the gtkui_disk_open_[ab] and
	 gtkui_disk_eject(_write)_[ab] functions.
20040106 tape.c: put the header type/name in the tape browser 'details'
	 field.
20040107 trdos.c: always non-busy just after a reset (part of patch
	 #871182) (Fred).
20040107 trdos.c: update the statusbar disk indicator (next part of patch
	 #871182) (Fred).
20040107 utils.c: replace arbitrary constant by PATH_MAX (next part of
	 patch #871182) (Fred).
20040108 specplus3.c, trdos.[ch], utils.[ch], ui/ui.h, ui/gtk/gtkui.c:
	 make writes to TR-DOS disks need explicit commits.